@@ -125,6 +125,14 @@ Called on "helo" from the client.
   DECLINED - Qpsmtpd will send the standard HELO message
 
 
+=head2 unrecognized_command
+
+Called when we get a command that isn't recognized.
+
+  DENY - Return 521 and disconnect the client
+  DONE - Qpsmtpd won't do anything; the plugin responded 
+  Anything else - Return '500 Unrecognized command'
+
 =head2 disconnect
 
 Called just before we shutdown a connection.
